storeList 해당하는 범위만 검색 추가